--- a/index.html
+++ b/index.html
@@ -211,19 +211,25 @@
                     <div class="project-card">
                         <div class="card-header">
                             <i class="fas fa-server"></i>
-                            <h4>Administração de Servidores Linux</h4>
+                            <h4>Laboratorio de DevOps e Infraestrutura de TI</h4>
                         </div>
-                        <p>Configuração e manutenção de servidores Linux para ambientes corporativos, incluindo Apache,
-                            Nginx, MySQL e configurações de segurança.</p>
+                        <p>Implantação de um ambiente de microsserviços completo, do zero, utilizando Debian, Docker,
+                            Proxy Reverso, Monitoramento, Automação de Backups e uma aplicação customizada em Python. O
+                            projeto simula uma infraestrutura de produção real, totalmente containerizada e gerenciável.
+                        </p>
                         <div class="tech-pills">
-                            <span>Linux</span>
-                            <span>Apache</span>
-                            <span>MySQL</span>
-                            <span>SSH</span>
-                            <span>Firewall</span>
+                            <span>Debian</span>
+                            <span>Docker</span>
+                            <span>Docker Compose</span>
+                            <span>Nginx</span>
+                            <span>Python</span>
+                            <span>Flask</span>
+                            <span>Shell Script</span>
+                            <span>Cron</span>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn-secondary">Detalhes</a>
+                            <a href="https://github.com/IsmaelSidney/laboratorio_infra_ti/blob/main/README.md"
+                                target="_blank" rel="noopener noreferrer" class="btn-secondary">Detalhes</a>
                         </div>
                     </div>
 
