upload projeto redes

--- a/index.html
+++ b/index.html
@@ -257,19 +257,22 @@
                     <div class="project-card">
                         <div class="card-header">
                             <i class="fas fa-network-wired"></i>
-                            <h4>Configuração de Redes</h4>
+                            <h4>VPN IPsec: Conexão Matriz-Filial</h4>
                         </div>
-                        <p>Implementação e gerenciamento de infraestrutura de rede, configuração de roteadores, switches
-                            e protocolos de segurança.</p>
+                        <p>Implementação de uma VPN IPsec para conectar de forma segura as redes de uma Matriz e Filial
+                            sobre a internet, incluindo a configuração completa de roteadores de borda, NAT e
+                            roteamento.</p>
                         <div class="tech-pills">
-                            <span>TCP/IP</span>
-                            <span>DNS</span>
+                            <span>Roteamento</span>
+                            <span>VPN IPsec</span>
                             <span>DHCP</span>
-                            <span>VPN</span>
+                            <span>NAT</span>
                             <span>Mikrotik</span>
+                            <span>EVE-NG</span>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn-secondary">Detalhes</a>
+                            <a href="https://github.com/IsmaelSidney/VPN-IPsec-Site-to-Site-Mikrotik" target="_blank"
+                                rel="noopener noreferrer" class="btn-secondary">Detalhes</a>
                         </div>
                     </div>
 
